<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hallo Welt! Ich liebe dich</string>
	<string name="app_name">Smart-Room</string>
	<string name="action_settings">Settings</string>
	<string name="ILU">I Love You!</string>
	<string name="T">温度</string>
	<string name="H">湿度</string>
	<string name="PM">PM2.5</string>
	<string name="I">光照</string>
	<string name="SMO">烟雾</string>
	<string name="RP">人体\n感应</string>
	<string name="Vibration">震动</string>
	<string name="TIME">时间</string>
	<string name="Door">门</string>
	<string name="SSXX">宿舍信息</string>
	<string name="KZJM">控制界面</string>
	
	<string name="Value">值</string>
	
	<string name="LEO">Eidit By Leo.Liu and Amy.Lu</string>
	<string name="send">发送</string>
	<string name="Connect">连接</string>
	<string name="save">保存</string>
	<string name="clear">清空</string>
	<string name="quit">退出</string>
	<string name="Fan">风扇</string>
	<string name="Curtain">窗帘</string>
	<string name="LightOn">开灯</string>
	<string name="LightOff">关灯</string>
	<string name="Light3">三色灯</string>

</resources>